2nd commit with changes after notes

--- a/severe_buildAPage/buildASite.html
+++ b/severe_buildAPage/buildASite.html
@@ -2,6 +2,7 @@
 <head>
 <title>Ride Frequently Asked Questions</title>
 <link rel="stylesheet" type="text/css" href="build.stylesheets.css"/>
+<link rel="stylesheet" type="text/css" href="normalize.css"/>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -194,7 +195,7 @@
 		</tr>
 		<tr>
 			<td class="table-space-answers" >&nbsp;</td>
-			<td class="answer-body">Ride points are the currency of the Ride Rewards Program. They are redeemable for real rewards through Ride, such as gift cards to companies like Amazon, Dunkn Doughnuts, Regal, Home Depot, andy many more! Rewards to change based on availablity.</td>
+			<td class="answer-body"></td>
 			<td class="answer-space" >&nbsp;</td>
 		</tr>
 		<tr>
@@ -289,7 +290,7 @@
 		</tr>
 		<tr>
 			<td class="table-space-answers" >&nbsp;</td>
-			<td class="answer-body">We ask for Facebook permissions mainly for authentication purposes. When you redeem a reward, we use Facebook permissions to verify that you are the owner of the Ride account, and we also use Facebook to deliver Ride Rewards.td>
+			<td class="answer-body">We ask for Facebook permissions mainly for authentication purposes. When you redeem a reward, we use Facebook permissions to verify that you are the owner of the Ride account, and we also use Facebook to deliver Ride Rewards.</td>
 			<td class="answer-space" >&nbsp;</td>
 		</tr>
 		<tr>
